# lab07

./: CMakeLists.txt  REPORT.md  homework_report.md
.github/workflows/: release.yml
banking/: CMakeLists.txt
solver/: CMakeLists.txt
